@@ -1,6 +1,8 @@
 2010-07-09  6.6.3-1 Cristy  <quetzlzacatenango@image...>
   * Fix memory leak in for corrupt BMP images (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16600).
+  * Repair several issues when writing to stdout (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16620).
 
 2010-07-07  6.6.3-1 Glenn Randers-Pehrson <glennrp@image...>
   * The PNG decoder failed to handle the tRNS chunk properly for grayscale
